src/index.css
@font-face {
  font-family: "Open Sans";
  src: url("./fonts/OpenSans-Regular.woff2") format("woff2"),
    url("./fonts/OpenSans-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Open Sans";
  src: url("./fonts/OpenSans-Bold.woff2") format("woff2"),
    url("./fonts/OpenSans-Bold.woff") format("woff");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Open Sans";
  src: url("./fonts/OpenSans-Light.woff2") format("woff2"),
    url("./fonts/OpenSans-Light.woff") format("woff");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Open Sans";
  src: url("./fonts/OpenSans-SemiBold.woff2") format("woff2"),
    url("./fonts/OpenSans-SemiBold.woff") format("woff");
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Open Sans";
  src: url("./fonts/OpenSans-ExtraBold.woff2") format("woff2"),
    url("./fonts/OpenSans-ExtraBold.woff") format("woff");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

:root {
  --background-color: rgba(238, 239, 233, 1);
  --siteRed: rgba(236, 158, 42, 1);
  --siteRedHighlight: rgba(236, 158, 42, 0.2);
  --greybackground: rgba(225, 227, 220, 1);
  --siteRedAccent: rgba(243, 78, 10, 1);
  --siteturquoise: rgba(0, 161, 188, 1);
  --navbarBackground: rgba(225, 227, 220, 1);
  --navBarBorder: rgba(202, 203, 194, 1);
  --sitePurple: rgba(181, 34, 206, 1);
  --showcasecard: rgba(64, 64, 67, 1);
  --kpiBlue: rgba(46, 113, 254, 1);
  --kpiCardBlue: rgba(2, 92, 225, 1);
  --kpiText: rgba(235, 237, 230, 1);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

a {
  font-weight: 400;
  text-decoration: none;
  color: black;
}

.active {
  color: var(--siteRedAccent);
  background-color: var(--siteRedHighlight);
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: "Open Sans", sans-serif;
  background-color: var(--background-color);
  /* display: flex;
  place-items: center;*/
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

p {
  margin-top: 0;
  margin-bottom: 0;
}

h3 {
  margin-bottom: 15px;
}

/* here is the site container for every section */

/* for wider screens I want the container to only be 1200 wide */

.container {
  width: 1200px;
  max-width: 80%;
  margin: 0 auto;
}

/* here is the navbar styling */

.navbar {
  padding: 2em 0;
  position: sticky;
  background-color: var(--navbarBackground);
  top: 0;
  border-bottom: 1px solid var(--navBarBorder);
}

.navbarContent {
  display: flex;
  justify-content: space-between;
}

.navbarElements {
  padding-left: 0;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  list-style-type: none;
}

.navbarElements li {
  margin-right: 1em;
  font-size: 18px;
  line-height: 1.1;
}

.logo {
  height: 60px;
  width: auto;
  margin: 0;
}

.hamburger {
  display: none;
  font-size: 40px;
}

.hamburger button {
  font-size: 1.2em;
  background-color: var(--navbarBackground);
  color: black;
  border: none;
  cursor: pointer;
  margin: 0;
}

.nav-links {
  position: fixed;
  display: flex;
  flex-direction: column;
  top: 0;
  right: 0;
  height: 100%;
  width: 200px;
  transition: transform 0.3s ease;
  background-color: white;
  color: #fff;
  transform: translateX(100%);
  background-color: var(--background-color);
  border-left: var(--siteRed) 3px solid;
}
.nav-links.open {
  transform: translateX(0);
}

.nav-links ul {
  list-style: none;
  font-size: 1.2em;
}

ul li {
  margin-bottom: 30px;
  margin-left: 10px;
}

.closebtn {
  align-self: flex-end;
  color: black;
  font-size: 2em;
  margin-top: 1rem;
  margin-right: 1rem;
  cursor: pointer;
  border: none;
  background-color: transparent;
}

/* Top section styling */

.topSection {
  margin-top: 30px;
}

/* here is the hero section styling */

.hero {
  height: 70vh;
}

.hero h1 {
  font-family: "Open Sans", sans-serif;
  font-size: 4em;
  font-weight: 400; /* Regular weight */
  margin-top: 50px;
  margin-bottom: 50px;
}

.hero h2 {
  font-family: "Open Sans", sans-serif;
  font-size: 7em;
  font-weight: 400; /* Light weight */
  margin: 0;
  margin-bottom: 60px;
  line-height: 1;
}

.redq {
  color: red;
}

.hero p {
  font-family: "Open Sans", sans-serif;
  font-size: 1.5em;
  font-weight: 300; /* Regular weight */

  max-width: 50%;
  margin-top: 20px;
}

.hero h4 {
  font-weight: 600;
  font-size: 1.2em;
  margin: 0;
}

.orangehighlight {
  background-color: var(--siteRedHighlight);
}

.problemText {
  color: var(--siteRedAccent);
}
.solutionText {
  color: var(--siteturquoise);
}

/* end of hero section */

/* Homepage - showcase section */

.showcaseSection {
  background-color: black;
  padding-top: 30px;
  padding-bottom: 80px;
}

.showcaseTitle {
  margin: 0 auto;
}

.showcaseTitle h2 {
  margin: 0;
  line-height: 1;
}

.showcase {
  color: white;
}
.showcaseTitle {
  display: flex;
  align-items: center;
  flex-direction: column;
  padding-top: 20px;
  padding-bottom: 20px;
}

.showcaseTitle h2 {
  font-size: 2em;
  font-weight: 400;
  margin: 0;
}

.showcaseLogocontainer {
  margin-top: 30px;
  margin-bottom: 30px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 30px;
  grid-auto-flow: row;
}

.showcaseLogoCard {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 40px;
  background-color: var(--showcasecard);
  border-radius: 15px;
}

.showcaseIcon {
  height: auto;
  width: 100%;
}

.showcaseTitleOrange {
  color: var(--siteRed);
}

.showcaseLink {
  color: var(--siteRed);
  font-size: 2em;
  font-weight: 400;
}

/* end of showcase section */

/* Delivery evidence card styling */

.evidenceCardHolder {
  margin: 0 auto;
  background-color: var(--greybackground);
  padding: 30px;
  margin-top: 20px;
  border-radius: 10px;
}

.evidenceGridHolder {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
}
/* ... */

